[metadata]
name = python_ethermine
version = 0.0.1
author = Carl Argabright
author_email = carl.argabright@gmail.com
description = Ethermine API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tekgeek88/python-ethermine
project_urls =
    Bug Tracker = https://github.com/tekgeek88/python-ethermine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src